# Antigravity-Game-Engine

./: CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/src/audio/: AudioSystem.cpp  AudioSystem.h
engine/src/core/: Application.cpp  Application.h  Core.h  Input.cpp  Input.h  KeyCodes.h  Log.cpp  Log.h  ResourceManager.h  Timestep.h  Window.cpp  Window.h
engine/src/entity/: Entity.h
engine/src/physics/: PhysicsSystem.cpp  PhysicsSystem.h
engine/src/renderer/: Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  Light.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLShader.cpp  OpenGLShader.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Renderer.cpp  Renderer.h  Shader.h
engine/src/scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
engine/src/scripting/: ScriptSystem.cpp  ScriptSystem.h
engine/src/ui/: UISystem.cpp  UISystem.h
game/src/: main.cpp
